Published multiple files

--- a/src/site/notes/FB/第一章/复数上的拓扑.md
+++ b/src/site/notes/FB/第一章/复数上的拓扑.md
@@ -1,4 +1,4 @@
 ---
-{"dg-publish":true,"permalink":"/FB/第一章/复数上的拓扑/","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/FB/第一章/复数上的拓扑/","noteIcon":""}
 ---
 
