--- a/src/site/notes/SHUZHI/二分法.md
+++ b/src/site/notes/SHUZHI/二分法.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/SHUZHI/二分法/","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/SHUZHI/二分法/","noteIcon":""}
 ---
 
 #### 什么是根
