--- a/src/site/notes/SHUZHI/第一章引论-误差分析.md
+++ b/src/site/notes/SHUZHI/第一章引论-误差分析.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/SHUZHI/第一章引论-误差分析/","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/SHUZHI/第一章引论-误差分析/","noteIcon":""}
 ---
 
 dp-publish:ture
