--- a/src/site/notes/作业草稿/数值分析第二次作业.md
+++ b/src/site/notes/作业草稿/数值分析第二次作业.md
@@ -1,4 +1,4 @@
 ---
-{"dg-publish":true,"permalink":"/作业草稿/数值分析第二次作业/","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/作业草稿/数值分析第二次作业/","noteIcon":""}
 ---
 
