Published multiple files

--- a/src/site/notes/SHUZHI/迭代方法.md
+++ b/src/site/notes/SHUZHI/迭代方法.md
@@ -214,7 +214,9 @@ $$
 >  - **若$p$是$M$阶重根**，则收敛速度为线性收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{M-1}{M}|E_n| \quad (2) $$
 
 公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开： $$ 0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 $$ **步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
-$$ 0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 2**：移项整理后为：
+$$ 
+0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 
+$$ **步骤 2**：移项整理后为：
 $$p_n - \frac{f(p_n)}{f'(p_n)} - p = \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 3**：令误差项 $E_n = p - p_n$，则迭代误差满足： 
 $$ |E_{n+1}| = \left| \frac{f''(\xi)}{2f'(p_n)} \cdot E_n^2 \right| \approx \frac{|f''(p)|}{2|f'(p)|} |E_n|^2 
 $$
@@ -222,7 +224,11 @@ $$
 **步骤 3**：分析迭代误差 $E_n = p - p_n$： 
 $$ |E_{n+1}| = |g(p_n) - g(p)| = |g'(\xi)(p_n - p)| \approx \frac{M - 1}{M} |E_n| $$ 
 >[!note] 修正公式
-> 假设牛顿-拉夫森算法产生的序列线性收敛到阶数 $M>1$ 的根 $x= p$。则修正后的牛顿-拉夫森迭代公式： $$ P_k = P_{k - 1} - \frac{Mf(P_{k - 1})}{f'(P_{k - 1})} $$ 将生成序列 $\{P_k\}_{k = 0}^{\infty}$，该序列**二次收敛**于 $p$
+> 假设牛顿-拉夫森算法产生的序列线性收敛到阶数 $M>1$ 的根 $x= p$。则修正后的牛顿-拉夫森迭代公式： 
+> $$ 
+> P_k = P_{k - 1} - \frac{Mf(P_{k - 1})}{f'(P_{k - 1})} 
+> $$ 
+> 将生成序列 $\{P_k\}_{k = 0}^{\infty}$，该序列**二次收敛**于 $p$
 ### 割线法：
 在牛顿法中需要运用导数，有时候导数并不好求，故而我们用割线逼近
 $$
@@ -233,7 +239,9 @@ f'(P_{n-1})\approx\frac{f(P_{n-2})-f(P_{n-1})}{P_{n-2}-P_{n-1}}=\frac{f(P_{n-1})
 $$
 >[!note] 割线法定义：
 >在牛顿公式中我们用上述公式替代$f'(P)$,我们有
->$$p_{n}=p_{n-1}-\frac{f(P_{n-1})(P_{n-1}-P_{n-2})}{f(P_{n-1})-f(P_{n-2})}$$
+>$$
+>p_{n}=p_{n-1}-\frac{f(P_{n-1})(P_{n-1}-P_{n-2})}{f(P_{n-1})-f(P_{n-2})}
+>$$
 
 ![screenshot-1742728680455.png](/img/user/screenshot-1742728680455.png)
 
