Published multiple files

--- a/src/site/notes/SHUZHI/迭代方法.md
+++ b/src/site/notes/SHUZHI/迭代方法.md
@@ -210,13 +210,12 @@ $$
 我们容易证明： $$\lim\limits_{ k \to \infty }p_{k}=A$$
 >[!note]  定理：A的近似估计
 > 假设牛顿-拉弗森迭代法生成的序列$\{p_n\}_{n=0}^\infty$收敛于函数$f(x)$的根$p$：
->  - **若$p$是单根**（简单根），则收敛速度为二次收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{|f''(p)|}{2|f'(p)|}|E_n|^2 \quad (1) $$ 
+>  - **若$p$是单根**（简单根），则收敛速度为二次收敛，且当$n$足够大时满足 $$|E_{n+1}| \approx \frac{|f''(p)|}{2|f'(p)|}|E_n|^2 \quad (1)$$ 
 >  - **若$p$是$M$阶重根**，则收敛速度为线性收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{M-1}{M}|E_n| \quad (2) $$
 
 公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开： $$ 0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 $$ **步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
 $$ 
-0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 
-$$ **步骤 2**：移项整理后为：
+0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 2**：移项整理后为：
 $$p_n - \frac{f(p_n)}{f'(p_n)} - p = \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 3**：令误差项 $E_n = p - p_n$，则迭代误差满足： 
 $$ |E_{n+1}| = \left| \frac{f''(\xi)}{2f'(p_n)} \cdot E_n^2 \right| \approx \frac{|f''(p)|}{2|f'(p)|} |E_n|^2 
 $$
