Published multiple files

--- a/src/site/notes/SHUZHI/迭代方法.md
+++ b/src/site/notes/SHUZHI/迭代方法.md
@@ -112,7 +112,7 @@ $$
 $$
 ____
 >[!note] 收敛速度
- 若序列 $\{P_n\}_{n=0}^{\infty}$ 收敛于 $P$，定义误差项 $E_n = P - P_n$（$n \geq 0$）。若存在正常数 $A \neq 0$ 和 $R > 0$，使得极限 $$ \lim_{n \rightarrow \infty} \frac{|P - P_{n+1}|}{|P - P_n|^R} = \lim_{n \rightarrow \infty} \frac{|E_{n+1}|}{|E_n|^R} = A, $$ 则称序列以 **收敛阶 $R$** 收敛于 $P$。
+ 若序列 $\{P_n\}_{n=0}^{\infty}$ 收敛于 $P$，定义误差项 $E_n = P - P_n$（$n \geq 0$）。若存在正常数 $A \neq 0$ 和 $R > 0$，使得极限 $$\lim_{n \rightarrow \infty} \frac{|P - P_{n+1}|}{|P - P_n|^R} = \lim_{n \rightarrow \infty} \frac{|E_{n+1}|}{|E_n|^R} = A, $$ 则称序列以 **收敛阶 $R$** 收敛于 $P$。
   1.**线性收敛**：当 $R=1$ 时，称 $\{P_n\}_{n=0}^{\infty}$ 是线性收敛的。 
 2.**超线性收敛**：当 $R>1$ 时，称 $\{P_n\}_{n=0}^{\infty}$ 是超线性收敛的。
   3.**二次收敛**：当 $R=2$ 时，称 $\{P_n\}_{n=0}^{\infty}$ 是二次收敛的。
@@ -215,7 +215,8 @@ $$
 
 公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开： $$ 0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 $$ **步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
 $$ 
-0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 2**：移项整理后为：
+0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 
+$$ **步骤 2**：移项整理后为：
 $$p_n - \frac{f(p_n)}{f'(p_n)} - p = \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 3**：令误差项 $E_n = p - p_n$，则迭代误差满足： 
 $$ |E_{n+1}| = \left| \frac{f''(\xi)}{2f'(p_n)} \cdot E_n^2 \right| \approx \frac{|f''(p)|}{2|f'(p)|} |E_n|^2 
 $$
