--- a/src/site/notes/SHUZHI/迭代方法.md
+++ b/src/site/notes/SHUZHI/迭代方法.md
@@ -213,7 +213,10 @@ $$
 >  - **若$p$是单根**（简单根），则收敛速度为二次收敛，且当$n$足够大时满足 $$|E_{n+1}| \approx \frac{|f''(p)|}{2|f'(p)|}|E_n|^2 \quad (1)$$ 
 >  - **若$p$是$M$阶重根**，则收敛速度为线性收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{M-1}{M}|E_n| \quad (2) $$
 
-公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开： $$ 0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 $$ **步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
+公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开：
+$$
+0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 
+$$ **步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
 $$ 
 0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 
 $$ **步骤 2**：移项整理后为：
