--- a/src/site/notes/SHUZHI/迭代方法.md
+++ b/src/site/notes/SHUZHI/迭代方法.md
@@ -112,7 +112,7 @@ $$
 $$
 ____
 >[!note] 收敛速度
- 若序列 $\{P_n\}_{n=0}^{\infty}$ 收敛于 $P$，定义误差项 $E_n = P - P_n$（$n \geq 0$）。若存在正常数 $A \neq 0$ 和 $R > 0$，使得极限 $$\lim_{n \rightarrow \infty} \frac{|P - P_{n+1}|}{|P - P_n|^R} = \lim_{n \rightarrow \infty} \frac{|E_{n+1}|}{|E_n|^R} = A, $$ 则称序列以 **收敛阶 $R$** 收敛于 $P$。
+ 若序列 $\{P_n\}_{n=0}^{\infty}$ 收敛于 $P$，定义误差项 $E_n = P - P_n$（$n \geq 0$）。若存在正常数 $A \neq 0$ 和 $R > 0$，使得极限 $$ \lim_{n \rightarrow \infty} \frac{|P - P_{n+1}|}{|P - P_n|^R} = \lim_{n \rightarrow \infty} \frac{|E_{n+1}|}{|E_n|^R} = A, $$ 则称序列以 **收敛阶 $R$** 收敛于 $P$。
   1.**线性收敛**：当 $R=1$ 时，称 $\{P_n\}_{n=0}^{\infty}$ 是线性收敛的。 
 2.**超线性收敛**：当 $R>1$ 时，称 $\{P_n\}_{n=0}^{\infty}$ 是超线性收敛的。
   3.**二次收敛**：当 $R=2$ 时，称 $\{P_n\}_{n=0}^{\infty}$ 是二次收敛的。
@@ -210,63 +210,31 @@ $$
 我们容易证明： $$\lim\limits_{ k \to \infty }p_{k}=A$$
 >[!note]  定理：A的近似估计
 > 假设牛顿-拉弗森迭代法生成的序列$\{p_n\}_{n=0}^\infty$收敛于函数$f(x)$的根$p$：
->  - **若$p$是单根**（简单根），则收敛速度为二次收敛，且当$n$足够大时满足 $$|E_{n+1}| \approx \frac{|f''(p)|}{2|f'(p)|}|E_n|^2 \quad (1)$$ 
+>  - **若$p$是单根**（简单根），则收敛速度为二次收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{|f''(p)|}{2|f'(p)|}|E_n|^2 \quad (1) $$ 
 >  - **若$p$是$M$阶重根**，则收敛速度为线性收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{M-1}{M}|E_n| \quad (2) $$
 
-公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开：
+公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开： $$ 0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 $$ **步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
+$$ 0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 2**：移项整理后为：
+$$p_n - \frac{f(p_n)}{f'(p_n)} - p = \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 3**：令误差项 $E_n = p - p_n$，则迭代误差满足： 
+$$ |E_{n+1}| = \left| \frac{f''(\xi)}{2f'(p_n)} \cdot E_n^2 \right| \approx \frac{|f''(p)|}{2|f'(p)|} |E_n|^2 
 $$
-0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 
-$$
-
-**步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
-$$ 
-0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 
-$$
-**步骤 2**：移项整理后为：
-$$
-p_n - \frac{f(p_n)}{f'(p_n)} - p = \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 
-$$
-**步骤 3**：令误差项 $E_n = p - p_n$，则迭代误差满足： 
-$$ 
-|E_{n+1}| = \left| \frac{f''(\xi)}{2f'(p_n)} \cdot E_n^2 \right| \approx \frac{|f''(p)|}{2|f'(p)|} |E_n|^2 
-$$
-公式 (2.59) 的证明 设 $p$ 是方程 $f(x)=0$ 的 $M$ 阶多重根，即： 
-$$
-f(x) = (x - p)^M h(x), \quad M > 1,\, h(p) \neq 0
-$$ **步骤 1**：构造迭代函数
-$$ 
-g(x) = x - \frac{f(x)}{f'(x)}
-$$计算其导数：
-$$
-g'(x) = \frac{ 1 - \frac{1}{M} + (x - p)\frac{2h'(x)}{Mh(x)} + (x - p)^2\frac{h''(x)}{M^2h(x)} } { \left[1 + (x - p)\frac{h'(x)}{Mh(x)}\right]^2 } 
-$$ **步骤 2**：在根 $p$ 处求导数值： 
-$$ 
-g'(p) = 1 - \frac{1}{M} \quad (M > 1) 
-$$ 由于
-$$
-|g'(p)| = \left|1 - \frac{1}{M}\right| < 1 
-$$说明迭代过程收敛。 
+公式 (2.59) 的证明 设 $p$ 是方程 $f(x)=0$ 的 $M$ 阶多重根，即： $$ f(x) = (x - p)^M h(x), \quad M > 1,\, h(p) \neq 0 $$ **步骤 1**：构造迭代函数 $$ g(x) = x - \frac{f(x)}{f'(x)} $$计算其导数： $$ g'(x) = \frac{ 1 - \frac{1}{M} + (x - p)\frac{2h'(x)}{Mh(x)} + (x - p)^2\frac{h''(x)}{M^2h(x)} } { \left[1 + (x - p)\frac{h'(x)}{Mh(x)}\right]^2 } $$ **步骤 2**：在根 $p$ 处求导数值： $$ g'(p) = 1 - \frac{1}{M} \quad (M > 1) $$ 由于 $$ |g'(p)| = \left|1 - \frac{1}{M}\right| < 1 $$说明迭代过程收敛。 
 **步骤 3**：分析迭代误差 $E_n = p - p_n$： 
 $$ |E_{n+1}| = |g(p_n) - g(p)| = |g'(\xi)(p_n - p)| \approx \frac{M - 1}{M} |E_n| $$ 
 >[!note] 修正公式
-> 假设牛顿-拉夫森算法产生的序列线性收敛到阶数 $M>1$ 的根 $x= p$。则修正后的牛顿-拉夫森迭代公式： 
-> $$ 
-> P_k = P_{k - 1} - \frac{Mf(P_{k - 1})}{f'(P_{k - 1})} 
-> $$ 
-> 将生成序列 $\{P_k\}_{k = 0}^{\infty}$，该序列**二次收敛**于 $p$
+> 假设牛顿-拉夫森算法产生的序列线性收敛到阶数 $M>1$ 的根 $x= p$。则修正后的牛顿-拉夫森迭代公式： $$ P_k = P_{k - 1} - \frac{Mf(P_{k - 1})}{f'(P_{k - 1})} $$ 将生成序列 $\{P_k\}_{k = 0}^{\infty}$，该序列**二次收敛**于 $p$
 ### 割线法：
 在牛顿法中需要运用导数，有时候导数并不好求，故而我们用割线逼近
 $$
 f'(P_{n-1})=\lim\limits_{ x \to P_{n-1} } \frac{f(x)-f(P_{n-1})}{x-P_{n-1}}
-$$我们让$x=P_{n-2}$,那么就有
+$$
+我们让$x=P_{n-2}$,那么就有
 $$
 f'(P_{n-1})\approx\frac{f(P_{n-2})-f(P_{n-1})}{P_{n-2}-P_{n-1}}=\frac{f(P_{n-1})-f(P_{n-2})}{P_{n-1}-P_{n-2}}
 $$
 >[!note] 割线法定义：
 >在牛顿公式中我们用上述公式替代$f'(P)$,我们有
->$$
->p_{n}=p_{n-1}-\frac{f(P_{n-1})(P_{n-1}-P_{n-2})}{f(P_{n-1})-f(P_{n-2})}
->$$
+>$$p_{n}=p_{n-1}-\frac{f(P_{n-1})(P_{n-1}-P_{n-2})}{f(P_{n-1})-f(P_{n-2})}$$
 
 ![screenshot-1742728680455.png](/img/user/screenshot-1742728680455.png)
 
