Published multiple files

--- a/src/site/notes/SHUZHI/迭代方法.md
+++ b/src/site/notes/SHUZHI/迭代方法.md
@@ -213,9 +213,13 @@ $$
 >  - **若$p$是单根**（简单根），则收敛速度为二次收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{|f''(p)|}{2|f'(p)|}|E_n|^2 \quad (1) $$ 
 >  - **若$p$是$M$阶重根**，则收敛速度为线性收敛，且当$n$足够大时满足 $$ |E_{n+1}| \approx \frac{M-1}{M}|E_n| \quad (2) $$
 
-公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开： $$ 0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 $$ **步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
-$$ 0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 2**：移项整理后为：
-$$p_n - \frac{f(p_n)}{f'(p_n)} - p = \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ **步骤 3**：令误差项 $E_n = p - p_n$，则迭代误差满足： 
+公式 (2.58) 的证明 设 $p$ 是 $f(x)$的一个单根。根据泰勒公式展开： $$ 0 = f(p) = f(p_n) + f'(p_n)(p - p_n) + \frac{f''(\xi)}{2}(p - p_n)^2 $$ 
+**步骤 1**：在等式两边同时除以 $f'(p_n) \neq 0$，得到： 
+$$ 0 = \frac{f(p_n)}{f'(p_n)} + (p - p_n) + \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$ 
+**步骤 2**：移项整理后为：
+$$p_n - \frac{f(p_n)}{f'(p_n)} - p = \frac{f''(\xi)}{2f'(p_n)}(p - p_n)^2 $$
+
+**步骤 3**：令误差项 $E_n = p - p_n$，则迭代误差满足： 
 $$ |E_{n+1}| = \left| \frac{f''(\xi)}{2f'(p_n)} \cdot E_n^2 \right| \approx \frac{|f''(p)|}{2|f'(p)|} |E_n|^2 
 $$
 公式 (2.59) 的证明 设 $p$ 是方程 $f(x)=0$ 的 $M$ 阶多重根，即： $$ f(x) = (x - p)^M h(x), \quad M > 1,\, h(p) \neq 0 $$ **步骤 1**：构造迭代函数 $$ g(x) = x - \frac{f(x)}{f'(x)} $$计算其导数： $$ g'(x) = \frac{ 1 - \frac{1}{M} + (x - p)\frac{2h'(x)}{Mh(x)} + (x - p)^2\frac{h''(x)}{M^2h(x)} } { \left[1 + (x - p)\frac{h'(x)}{Mh(x)}\right]^2 } $$ **步骤 2**：在根 $p$ 处求导数值： $$ g'(p) = 1 - \frac{1}{M} \quad (M > 1) $$ 由于 $$ |g'(p)| = \left|1 - \frac{1}{M}\right| < 1 $$说明迭代过程收敛。 
